app/client/stylesheets/styles.css
:root {
    --round: 8px;
    --spacing: 5px;
    --unit: 10px;
    --black: #121212;
    --white: #efefe6;
    --grey: #272728;
    --light-grey: #6c6c6c;
}
@font-face {
    font-family: OldLondon;
    src: url("/fonts/OldLondon/OldLondon.ttf") format("truetype");
}
@font-face {
    font-family: KarnakCondensed;
    src: url("/fonts/NYTKarnakCondensed/NYTKarnakCondensed.otf") format("opentype");
}
@font-face {
    font-family: KarnakDeco;
    src: url("/fonts/K22 Karnak Deco/K22 Karnak Deco.otf") format("opentype");
}

* {
    /* IE and Edge */
    -ms-overflow-style: none;
    /* Firefox */
    scrollbar-width: none;

    /* Chrome, Safari and Opera */
    &::-webkit-scrollbar {
        display: none;
    }
}

body {
    background-color: var(--black);
    overflow: scroll;
    width: 100%;
    height: 100%;
    margin: 0;
    > *:not(.card.popup) {
        margin: auto;
    }
}

#loading {
    z-index: 5;
    position: fixed;
    background-color: inherit;
    margin: 0 auto;
    box-sizing: border-box;
    text-align: center;
    width: 100%;
    height: 100%;
    color: var(--white);
    align-content: center;
    font-family: KarnakDeco, "Lucida Grande", sans-serif;
    &.hide {
        animation: fadeOut 0.75s forwards;
    }
    > div:first-of-type {
        width: 100%;
        height: max-content;
        background-color: inherit;
        position: relative;
        z-index: 6;
        > * {
            margin: 1rem auto;
            width: fit-content;
        }
    }
    > .footer {
        margin: 0 auto;
        transform: translateX(-50%);
        position: fixed;
        left: 50%;
        bottom: 5%;
        width: 60%;
        z-index: 5;
    }
    .progress-bar {
        width: 45% !important;
        height: .6rem;
        margin: 2rem auto !important;
    }
    .icon {
        background: url("/connections-icon.svg") center / cover no-repeat;
        width: 6rem !important;
        height: 6rem;
    }
    .title {
        font-size: xx-large;
    }
    .thick { /* poorly named */
        font-family: KarnakCondensed, Arial, sans-serif;
    }
    .bold {
        font-weight: bold;
    }
    .fancy {
        font-family: OldLondon, sans-serif;
    }
    .tiny {
        font-size: x-small;
        &:last-of-type {
            color: var(--light-grey);
        }
    }
}

#content-container {
    position: relative;
    z-index: 0;
    margin: 0 auto;
    box-sizing: border-box;
    align-content: center; 
    width: 80%;
    height: auto;
    font-family: "HelveticaNeue-Bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
    font-weight: 350;
    overflow: scroll; /* never clip- need to detect with JS */
    scrollbar-width: none;
    -ms-overflow-style: none;
    &::-webkit-scrollbar, &.hide {
        display: none;
    }
    & > .icon {
        margin: 10% auto;
    }
}

#card-grid {
    --category-reveal-transition-duration: 1s;
    margin-bottom: 15%; /* don't overlap with submit button */
    display: grid;
    > div {
        grid-area: 1 / 1;
        display: grid;
        gap: var(--unit);
        width: 100%;
        top: 0;
    }
}

#buttons {
    transform: translateX(-50%);
    position: fixed;
    z-index: 2;
    left: 50%;
    bottom: 5%;
    width: 60%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    place-items: center;
    gap: calc(var(--spacing) * 2);
    > div.pill {
        width: 80%;
    }
    &.hide {
        display: none;
    }
}

#words {
    z-index: 1;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

#categories {
    z-index: 2;
    grid-template-columns: 1fr;
    pointer-events: none;
    grid-template-rows: repeat(4, 1fr);
}

.progress-bar {
    --color: var(--white);
    --bg-color: var(--grey);
    --progress: 0.0; /* float between 0-1 */
    --transition: .8s;
    --c: no-repeat linear-gradient(var(--color) 0 0);
    border-radius: 2%/50%;
    background: var(--c),var(--c), var(--bg-color);
    background-size: 150% 100%;
    transition: background-position var(--transition);
    background-position: calc(300% - calc(200% * var(--progress))) center;
    @starting-style {
        --progress: 0.0;
    }
}

.card {
    --bg-color: var(--white);
    --fg-color: var(--black);
    background-color: var(--bg-color);
    color: var(--fg-color);
    display: inline-block;
    box-sizing: border-box;
    border-radius: var(--round);
    padding: calc(var(--spacing) * 3) var(--spacing);
    text-align: center;
    justify-content: center;
    text-transform: uppercase;
    white-space: preserve nowrap;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    &.popup {
        --bg-color: var(--white);
        --fg-color: var(--black);
        z-index: 10;
        position: fixed;
        left: 50%;
        transform: translateX(-50%);
        top: 5%;
        min-width: 20%;
        max-width: 80%;
        max-height: 40%;
        justify-content: center;
        align-items: center;
        padding: calc(var(--spacing) / 2);
        transition: top .45s ease-in-out;
        &.hide { top: -5%; }
        @starting-style { top: -5%; }
    }
    &.word {
        --transition-duration: .3s;
        z-index: 1;
        --bg-color: var(--white);
        --fg-color: var(--black);
        font-weight: 500;
        overflow-wrap: break-word;
        hyphens: manual;
        opacity: 1;
        transition:
            opacity var(--category-reveal-transition-duration) ease-in-out,
            background-color var(--transition-duration) ease-in-out,
            color var(--transition-duration) ease-in-out;
        &.selected {
            --bg-color: #5a594e;
            --fg-color: #f8f8f8;
        }
        &.correct {
            pointer-events: none;
            --bg-color: #019a01;
        }
        &.incorrect {
            --bg-color: #ff7169;
        }
        &.hide {
            opacity: 0;
            pointer-events: none;
        }
        &.blank {
            --fg-color: var(--bg-color);
            pointer-events: none;
        }
    }
    &.category {
        --color: var(--white);
        background-color: var(--color);
        color: var(--black);
        font-weight: 650;
        opacity: 1;
        transition: opacity var(--category-reveal-transition-duration) ease-in;
        &.color-1 {
            --color: #f7Da21; /* yellow */
        }
        &.color-2 {
            --color: #b5e352; /* green */
        }
        &.color-3 {
            --color: #00a2b3; /* blue */
        }
        &.color-4 {
            --color: #a354a8; /* purple */
        }
        @starting-style {
            opacity: 0;
        }
    }
}

.pill {
    --color: var(--white);
    text-align: center;
    align-content: center;
    padding: .5rem;
    height: 2rem;
    border-radius: 2.6rem;
    border: 1px solid var(--color);
    background-color: var(--black);
    color: var(--color);
    text-transform: uppercase;
    &.disabled {
        --color: #8b8b8b;
        pointer-events: none;
    }
}

.icon {
    --size: auto;
    border-radius: 50%;
    /*
    width: var(--size);
    height: var(--size);
    &.xsm {
        --size: 32px;
    }
    &.sm {
        --size: 64px;
    }
    &.md {
        --size: 128px;
    }
    &.lg {
        --size: 256px;
    }
    &.xlg {
        --size: 512px;
    }
    */
}


.shake-incorrect {
    animation: shake-incorrect 0.2s ease-in-out 0s 2;
}

@keyframes shake-incorrect {
    0% { transform: translateX(0) }
    25% { transform: translateX(calc(var(--spacing)/2)) }
    75% { transform: translateX(calc(-1 * var(--spacing)/2)) }
    100% { transform: translateX(0) }
}

@keyframes fadeOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
        display: none;
    }
}

